--- a/FreshdeskTicket1.css
+++ b/FreshdeskTicket1.css
@@ -54,7 +54,7 @@ body {
   width: 17%;
   background-color: white;
   float: right;
-  margin: 10px;
+  margin-left: 10px;
   border-radius: 10px;
   padding: 10px;
 }
